Folks.SmallSet: return a value

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=706532